Added an image and styled the webpage.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -4,6 +4,7 @@ body {
   line-height: 1.5;
   background-color: black;
   color: white;
+  
 }
 
 h1{
@@ -18,7 +19,9 @@ p{
 }
 
 img{
-width: 800px;
+  padding-top: 70px;
+width:100%;
+
 }
 
 
@@ -28,7 +31,7 @@ width: 800px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   /* Two equal-width columns */
-  gap: 20px;
+  gap: 10px;
   /* Adjust gap between columns as needed */
 }
 
