--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,6 +1,6 @@
 body {
   font-family:  -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 1.5;
   background-color: black;
   color: white;
@@ -11,7 +11,7 @@ h1{
   font-size: 54px;
   font-family: 'gotham';
   text-transform: uppercase;
-  text-align: center;
+  margin: 30px;
 }
 
 p{
